package bkacad.player;

public class DefaultPlayer implements IPlayer {
    @Override
    public void play(String path) throws Exception {
        // Your code
        // Example: System.out.println("Play music from " + path);
    }

    @Override
    public void stop() throws Exception {
        // Your code
    }
}
