package bkacad.player;

public interface IPlayer {
    public void play(String path) throws Exception;

    public void stop() throws Exception;

}
