@startuml

title __DESIGNPATTERN2's Class Diagram__\n

  namespace bkacad {
    class bkacad.Application {
    }
  }
  

  namespace bkacad {
    class bkacad.Main {
    }
  }
  

  namespace bkacad {
    namespace player {
      class bkacad.player.DefaultPlayer {
      }
    }
  }
  

  namespace bkacad {
    namespace player {
      interface bkacad.player.IPlayer {
      }
    }
  }
  

  namespace bkacad {
    namespace player {
      class bkacad.player.MP3IPlayer {
      }
    }
  }
  

  namespace bkacad {
    namespace utils {
      class bkacad.utils.MediaFiles {
      }
    }
  }
  

  bkacad.Application o-- bkacad.player.IPlayer : defaultPlayer
  bkacad.Application o-- bkacad.player.IPlayer : mp3Player
  bkacad.Application o-- bkacad.player.IPlayer : player
  bkacad.player.DefaultPlayer .up.|> bkacad.player.IPlayer
  bkacad.player.MP3IPlayer .up.|> bkacad.player.IPlayer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
